@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- No longer try to set WM_QUIT when using an external Window on Win32. 
+  Thx @Marko Mahnic for the patch (https://sourceforge.net/p/irrlicht/bugs/449)
 - ply meshloader now also supports textures with uv-labels named texture_u/texture_v. 
   Thx @acy for bugreport and test-model (http://irrlicht.sourceforge.net/forum/viewtopic.php?f=4&t=52646)
 - Fix potential reading/writing 1 byte behind it's own buffer in PLY loader.
